# Query_Buddy

./: Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
