[project]
name = "query-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.1",
    "langchain>=1.0.2",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.44",
]

[tool.uv.workspace]
members = [
    "query-buddy",
]
